Tue Mar 10 11:01:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/TargetManager.mpc:
          Added missing base project

Mon Mar  9 13:39:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*:
          Added all CIAO doxygen files

Mon Mar  8 12:50:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/CIAO_Servant_Activator.mpc:
        * MPC/config/ciao_servant_activator.mpb:
          Disabled with minimum corba

Mon Mar  8 12:42:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_component_mpc.pl
        * ciao/ComponentServer/CIAO_ComponentServer.mpc
        * DAnCE/TargetManager/TargetManager.mpc
        * DAnCE/tests/CIAO/Components/SimpleAttribute.mpc
        * DAnCE/tests/CIAO/Components/SimpleCommon.mpc
        * DAnCE/tests/CIAO/Components/SimpleConsumer.mpc
        * DAnCE/tests/CIAO/Components/SimpleEmitter.mpc
        * DAnCE/tests/CIAO/Components/SimpleMultipleUser.mpc
        * DAnCE/tests/CIAO/Components/SimpleNull.mpc
        * DAnCE/tests/CIAO/Components/SimpleProvider.mpc
        * DAnCE/tests/CIAO/Components/SimplePublisher.mpc
        * DAnCE/tests/CIAO/Components/SimpleUser.mpc
        * docs/tutorials/Quoter/Simple/Broker/StockBroker.mpc
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributor.mpc
        * docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc
        * examples/DevGuideExamples/Messenger/Administrator.mpc
        * examples/DevGuideExamples/Messenger/Messenger.mpc
        * examples/DevGuideExamples/Messenger/Receiver.mpc
        * examples/Display/Display_Base/Display_Base.mpc
        * examples/Display/GPS/GPS.mpc
        * examples/Display/NavDisplay/NavDisplay.mpc
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc
        * examples/Display/RateGen/RateGen.mpc
        * examples/Hello/Hello_Base/Hello_Base.mpc
        * examples/Hello/Receiver/Receiver.mpc